# smart-banquet

./: README.md
client/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs
client/src/: App.tsx  index.css
client/src/components/: AboutSection.tsx  AutoPlayVideo.tsx  ContactUsSection.tsx  EventSpaceSection.tsx  Footer.tsx  GallerySection.tsx  Header.tsx  HomeSection.tsx  HomeVIdeo.tsx  Logo.tsx  Navbar.tsx  RestaurantSection.tsx  ServiceSection.tsx
client/src/pages/: About.tsx  ContactUs.tsx  Gallery.tsx  Home.tsx  Restaurant.tsx  Services.tsx
server/: Dockerfile  docker-compose.yml  pyproject.toml  sms.py
server/event/: models.py  serializers.py  views.py
server/event/migrations/: 0001_initial.py
server/main/: settings.py  urls.py
server/restaurant/: admin.py  models.py  serializers.py  views.py
server/restaurant/migrations/: 0001_initial.py
